# feature-manifold-exploration

./: .gitignore  README.md  activations.sh  activations_prototype.py  analyze_activations.py  collect_activations.py  compare_probe_vs_model.py  counting_data.py  demo_generation.py  device_utils.py  eval_counting.py  metrics.py  models.py  performance_data.sh  plot_mean_pca.py  plot_probe_predictions.py  plotting.py  pyproject.toml  test_batch_padding.py  test_token_mapping.py  token_mapping.py  train_probes.py
